# harness-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  harness-talk.html
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
crates/harness/: Cargo.toml  README.md
crates/harness-blueprint/: Cargo.toml
crates/harness-blueprint/src/: lib.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: main.rs
crates/harness-compactor/: Cargo.toml
crates/harness-compactor/src/: lib.rs
crates/harness-context/: Cargo.toml
crates/harness-context/src/: file_recall.rs  lib.rs  memory_file.rs  memory_guard.rs  redacting_memory.rs  runtime.rs
crates/harness-context/tests/: recall_contract.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: compactor.rs  context.rs  embed.rs  error.rs  event.rs  guide.rs  hook.rs  lib.rs  memory.rs  model.rs  profile.rs  recall.rs  recall_testkit.rs  sensor.rs  signal.rs  skill.rs  tool.rs  world.rs
crates/harness-cortexdb/: Cargo.toml
crates/harness-cortexdb/src/: lib.rs
crates/harness-daemon/: Cargo.toml
crates/harness-daemon/src/: lib.rs
crates/harness-experience/: Cargo.toml
crates/harness-experience/src/: episode.rs  guide.rs  lib.rs  recorder.rs  store.rs  trace.rs  transcript.rs
crates/harness-hooks/: Cargo.toml
crates/harness-hooks/src/: audit.rs  lib.rs  otel.rs
crates/harness-loop/: Cargo.toml  README.md
crates/harness-loop-engine/: Cargo.toml
crates/harness-loop-engine/src/: budget.rs  engine.rs  level.rs  lib.rs  patterns.rs  scheduler.rs  spec.rs
crates/harness-loop/src/: learning.rs  lib.rs  memory_layer.rs  otel.rs  profile_guide.rs  recall_layer.rs  registry.rs  replay.rs  subagent.rs  telemetry.rs
crates/harness-loop/tests/: agent_loop.rs  apply_patches.rs  compaction_hysteresis.rs  golden_path.rs  learning_loop.rs  parallel_dispatch.rs  prefix_cache_live.rs  recall_capture.rs  session_replay.rs  stuck_detection.rs  telemetry.rs
crates/harness-macros/: Cargo.toml
crates/harness-macros/src/: lib.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp-client/: Cargo.toml  README.md
crates/harness-mcp-client/src/: client.rs  lib.rs  proxy.rs
crates/harness-mcp-client/tests/: connect.rs  http_connect.rs  in_loop.rs
crates/harness-mcp/src/: lib.rs  protocol.rs  server.rs
crates/harness-models/: Cargo.toml  README.md
crates/harness-models/src/: anthropic.rs  config.rs  embed_gemini.rs  embed_ollama.rs  gemini.rs  kind.rs  lib.rs  mock.rs  openai_compat.rs  providers.rs  retry.rs  router.rs
crates/harness-orchestrator/: Cargo.toml
crates/harness-orchestrator/src/: dag.rs  job.rs  lib.rs  orchestrator.rs  planner.rs  run.rs  runner.rs  store.rs
crates/harness-orchestrator/tests/: orchestrator_tests.rs
crates/harness-permissions/: Cargo.toml
crates/harness-permissions/src/: lib.rs
crates/harness-recall-sqlite/: Cargo.toml
crates/harness-recall-sqlite/src/: lib.rs
crates/harness-recall-sqlite/tests/: recall_contract.rs
crates/harness-redact/: Cargo.toml  README.md
crates/harness-redact/src/: detectors.rs  lib.rs
crates/harness-sandbox/: Cargo.toml
crates/harness-sandbox/src/: lib.rs
crates/harness-scheduler/: Cargo.toml
crates/harness-scheduler/src/: channel.rs  lib.rs  scheduler.rs  store.rs  tool.rs
crates/harness-sensors-common/: Cargo.toml
crates/harness-sensors-common/src/: lib.rs
crates/harness-sensors-rust/: Cargo.toml
crates/harness-sensors-rust/src/: lib.rs
crates/harness-serve/: Cargo.toml  README.md  build.rs
crates/harness-serve/proto/: chat.proto
crates/harness-serve/src/: auth.rs  grpc.rs  http.rs  lib.rs  service.rs  session.rs
crates/harness-skills/: Cargo.toml
crates/harness-skills/src/: export.rs  lib.rs  lint.rs  loader.rs  registry.rs  validate.rs  write.rs
crates/harness-templates/: Cargo.toml
crates/harness-templates/src/: axum_crud.rs  crate_keeper.rs  lib.rs
crates/harness-tools-docs/: Cargo.toml
crates/harness-tools-docs/src/: lib.rs  ocr.rs
crates/harness-tools-docs/tests/: local_real.rs
crates/harness-tools-fs/: Cargo.toml
crates/harness-tools-fs/src/: lib.rs
crates/harness-tools-memory/: Cargo.toml
crates/harness-tools-memory/src/: lib.rs
crates/harness-tools-shell/: Cargo.toml
crates/harness-tools-shell/src/: lib.rs
crates/harness-tools-skills/: Cargo.toml
crates/harness-tools-skills/src/: lib.rs
crates/harness-tools-sql/: Cargo.toml  README.md
crates/harness-tools-sql/src/: executor.rs  guard.rs  lib.rs  sqlite.rs  tool.rs
crates/harness-tools-tasks/: Cargo.toml
crates/harness-tools-tasks/src/: lib.rs
crates/harness-tools-web/: Cargo.toml
crates/harness-tools-web/src/: lib.rs
crates/harness/src/: lib.rs
deploy/caddy/: Caddyfile  install.sh
docs/plans/: 2026-05-31-harness-mcp-client.md
docs/specs/: 2026-05-31-harness-mcp-client.md
examples/: README.md
examples/ai-ledger/: Cargo.toml
examples/ai-ledger/deploy/: install.sh  (+1 more)
examples/ai-note/: Cargo.toml
examples/cap/: Cargo.toml  README.md
examples/cortexdb-memory/: Cargo.toml  README.md
examples/crate-keeper/: Cargo.toml
examples/dashboard/: Cargo.toml
examples/deepseek-caps-e2e/: Cargo.toml
examples/deepseek-hello/: Cargo.toml
examples/ecommerce-analyst/: Cargo.toml  README.md  setup.sh
examples/ecommerce-ops-agent/: Cargo.toml  README.md
examples/eval-bench/: Cargo.toml
examples/experience-cortexdb/: Cargo.toml
examples/investor-bot/: Cargo.toml
examples/loop-engine-demo/: Cargo.toml
examples/orchestrator-demo/: Cargo.toml
examples/personal-assistant/: Cargo.toml
examples/redaction-demo/: Cargo.toml
scripts/: publish-loop.sh
skills/using-harness-rs/: SKILL.md
verticals/bi-server/: Cargo.toml
verticals/forge-ops-agent/: Cargo.toml
verticals/gym-membership-agent/: Cargo.toml
verticals/manufacturing-quality-agent/: Cargo.toml
verticals/retail-bi-agent/: Cargo.toml
verticals/supermarket-bi-agent/: Cargo.toml
verticals/teahouse-bi-agent/: Cargo.toml
verticals/vertical-common/: Cargo.toml
verticals/warehouse-bi-agent/: Cargo.toml
(+285 files in other folders)
