[workspace]
resolver = "3"
members = [
    "crates/harness",
    "crates/harness-core",
    "crates/harness-macros",
    "crates/harness-context",
    "crates/harness-compactor",
    "crates/harness-hooks",
    "crates/harness-loop",
    "crates/harness-blueprint",
    "crates/harness-sandbox",
    "crates/harness-skills",
    "crates/harness-tools-fs",
    "crates/harness-tools-shell",
    "crates/harness-sensors-rust",
    "crates/harness-sensors-common",
    "crates/harness-models",
    "crates/harness-templates",
    "crates/harness-mcp",
    "crates/harness-cli",
    "examples/crate-keeper",
    "examples/deepseek-hello",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liliang-cn/harness"
authors = ["liliang"]

[workspace.dependencies]
# internal
harness            = { path = "crates/harness",            version = "0.0.1" }
harness-core       = { path = "crates/harness-core",       version = "0.0.1" }
harness-macros     = { path = "crates/harness-macros",     version = "0.0.1" }
harness-context    = { path = "crates/harness-context",    version = "0.0.1" }
harness-compactor  = { path = "crates/harness-compactor",  version = "0.0.1" }
harness-hooks      = { path = "crates/harness-hooks",      version = "0.0.1" }
harness-loop       = { path = "crates/harness-loop",       version = "0.0.1" }
harness-blueprint  = { path = "crates/harness-blueprint",  version = "0.0.1" }
harness-sandbox    = { path = "crates/harness-sandbox",    version = "0.0.1" }
harness-skills     = { path = "crates/harness-skills",     version = "0.0.1" }
harness-tools-fs   = { path = "crates/harness-tools-fs",   version = "0.0.1" }
harness-tools-shell= { path = "crates/harness-tools-shell",version = "0.0.1" }
harness-sensors-rust   = { path = "crates/harness-sensors-rust",   version = "0.0.1" }
harness-sensors-common = { path = "crates/harness-sensors-common", version = "0.0.1" }
harness-models     = { path = "crates/harness-models",     version = "0.0.1" }
harness-templates  = { path = "crates/harness-templates",  version = "0.0.1" }
harness-mcp        = { path = "crates/harness-mcp",        version = "0.0.1" }
harness-cli        = { path = "crates/harness-cli",        version = "0.0.1" }

# external
async-trait = "0.1"
thiserror   = "2"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "io-util", "sync", "time"] }
tracing     = "0.1"
inventory   = "0.3"
regex       = "1"
futures     = "0.3"
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full", "extra-traits"] }
walkdir     = "2"
clap        = { version = "4", features = ["derive"] }
once_cell   = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
