[workspace]
resolver = "3"
members = [
    "crates/harness",
    "crates/harness-core",
    "crates/harness-macros",
    "crates/harness-context",
    "crates/harness-compactor",
    "crates/harness-hooks",
    "crates/harness-loop",
    "crates/harness-loop-engine",
    "crates/harness-blueprint",
    "crates/harness-sandbox",
    "crates/harness-permissions",
    "crates/harness-skills",
    "crates/harness-tools-fs",
    "crates/harness-tools-shell",
    "crates/harness-tools-web",
    "crates/harness-tools-tasks",
    "crates/harness-tools-memory",
    "crates/harness-tools-skills",
    "crates/harness-sensors-rust",
    "crates/harness-sensors-common",
    "crates/harness-models",
    "crates/harness-templates",
    "crates/harness-mcp",
    "crates/harness-mcp-client",
    "crates/harness-daemon",
    "crates/harness-scheduler",
    "crates/harness-recall-sqlite",
    "crates/harness-cli",
    "examples/crate-keeper",
    "examples/loop-engine-demo",
    "examples/deepseek-hello",
    "examples/personal-assistant",
    "examples/investor-bot",
    "examples/ai-note",
    "examples/deepseek-caps-e2e",
    "examples/eval-bench",
]

[workspace.package]
version = "0.0.16"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liliang-cn/harness-rs"
authors = ["liliang"]

[workspace.dependencies]
# internal — alias keys keep the in-source `use harness_core::*` style;
# `package = ...` selects the on-crates.io name (`harness` is taken by an
# unrelated benchmarking crate, so we publish as `harness-rs-*`).
harness            = { package = "harness-rs",            path = "crates/harness",            version = "0.0.16" }
harness-core       = { package = "harness-rs-core",       path = "crates/harness-core",       version = "0.0.16" }
harness-macros     = { package = "harness-rs-macros",     path = "crates/harness-macros",     version = "0.0.16" }
harness-context    = { package = "harness-rs-context",    path = "crates/harness-context",    version = "0.0.16" }
harness-compactor  = { package = "harness-rs-compactor",  path = "crates/harness-compactor",  version = "0.0.16" }
harness-hooks      = { package = "harness-rs-hooks",      path = "crates/harness-hooks",      version = "0.0.16" }
harness-loop       = { package = "harness-rs-loop",       path = "crates/harness-loop",       version = "0.0.16" }
harness-loop-engine= { package = "harness-rs-loop-engine", path = "crates/harness-loop-engine", version = "0.0.16" }
harness-blueprint  = { package = "harness-rs-blueprint",  path = "crates/harness-blueprint",  version = "0.0.16" }
harness-sandbox    = { package = "harness-rs-sandbox",    path = "crates/harness-sandbox",    version = "0.0.16" }
harness-permissions= { package = "harness-rs-permissions",path = "crates/harness-permissions",version = "0.0.16" }
harness-skills     = { package = "harness-rs-skills",     path = "crates/harness-skills",     version = "0.0.16" }
harness-tools-fs   = { package = "harness-rs-tools-fs",   path = "crates/harness-tools-fs",   version = "0.0.16" }
harness-tools-shell= { package = "harness-rs-tools-shell",path = "crates/harness-tools-shell",version = "0.0.16" }
harness-tools-web  = { package = "harness-rs-tools-web",  path = "crates/harness-tools-web",  version = "0.0.16" }
harness-tools-tasks= { package = "harness-rs-tools-tasks",path = "crates/harness-tools-tasks",version = "0.0.16" }
harness-tools-memory= { package = "harness-rs-tools-memory",path = "crates/harness-tools-memory",version = "0.0.16" }
harness-tools-skills= { package = "harness-rs-tools-skills",path = "crates/harness-tools-skills",version = "0.0.16" }
harness-sensors-rust   = { package = "harness-rs-sensors-rust",   path = "crates/harness-sensors-rust",   version = "0.0.16" }
harness-sensors-common = { package = "harness-rs-sensors-common", path = "crates/harness-sensors-common", version = "0.0.16" }
harness-models     = { package = "harness-rs-models",     path = "crates/harness-models",     version = "0.0.16" }
harness-templates  = { package = "harness-rs-templates",  path = "crates/harness-templates",  version = "0.0.16" }
harness-mcp        = { package = "harness-rs-mcp",        path = "crates/harness-mcp",        version = "0.0.16" }
harness-cli        = { package = "harness-rs-cli",        path = "crates/harness-cli",        version = "0.0.16" }
harness-daemon     = { package = "harness-rs-daemon",     path = "crates/harness-daemon",     version = "0.0.16" }
harness-scheduler  = { package = "harness-rs-scheduler",  path = "crates/harness-scheduler",  version = "0.0.16" }

# external
async-trait = "0.1"
thiserror   = "2"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "io-util", "sync", "time"] }
tracing     = "0.1"
inventory   = "0.3"
regex       = "1"
futures     = "0.3"
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full", "extra-traits"] }
walkdir     = "2"
clap        = { version = "4", features = ["derive"] }
once_cell   = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
chrono      = { version = "0.4", features = ["serde"] }
schemars    = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
