[package]
name = "harness-blueprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Deterministic + agent hybrid state machine"

[dependencies]
harness-core = { workspace = true }
harness-loop = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
tokio           = { workspace = true }
harness-context = { workspace = true }
