[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "harness command-line interface"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-core   = { workspace = true }
harness-skills = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
