[package]
name = "harness-rs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for harness-rs — run an agent, sched (recurring jobs), new (scaffold), skills validate/list/lint/export, trace, mcp serve."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-core    = { workspace = true }
harness-skills  = { workspace = true }
harness-loop    = { workspace = true }
harness-mcp     = { workspace = true }
harness-context = { workspace = true }
harness-tools-fs = { workspace = true }
harness-tools-shell = { workspace = true }
harness-models = { workspace = true }
harness-scheduler = { workspace = true }
harness-daemon = { workspace = true }
clap           = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
chrono         = { workspace = true }
