[package]
name = "harness-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Context assembly and prompt budget management"

[dependencies]
harness-core = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
