[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core traits and types for the harness agent framework"

[dependencies]
async-trait     = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
futures         = { workspace = true }
inventory       = { workspace = true }
