[package]
name = "harness-rs-experience"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Experience memory for harness-rs: record each run as an episode (situation → tools used → outcome) and semantically recall similar past experiences to guide the next run. Backend-agnostic over the Memory trait. Optional."

[lib]
name = "harness_experience"

[dependencies]
harness-core = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
harness-context = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
