[package]
name = "harness-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HookBus and the 27 lifecycle events"

[dependencies]
harness-core = { workspace = true }
inventory    = { workspace = true }
tracing      = { workspace = true }
