[package]
name = "harness-rs-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HookBus for harness-rs. Dispatches 27 lifecycle events with Allow/Deny/Inject/Mutate semantics. Optional OpenTelemetry feature."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
name = "harness_hooks"
path = "src/lib.rs"

[dependencies]
harness-core = { workspace = true }
inventory    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
opentelemetry        = { version = "0.27", optional = true }

[features]
default = []
otel    = ["dep:opentelemetry"]
