[package]
name = "harness-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ReAct agent loop with self-correction"

[dependencies]
harness-core      = { workspace = true }
harness-context   = { workspace = true }
harness-hooks     = { workspace = true }
harness-compactor = { workspace = true }
harness-models    = { workspace = true }
async-trait       = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }

[dev-dependencies]
harness-skills    = { workspace = true }
harness-tools-fs  = { workspace = true }
once_cell         = { workspace = true }
