[package]
name = "harness-rs-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ReAct agent loop, subagent isolation, and session record/replay (JSONL) for the harness-rs framework."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
name = "harness_loop"
path = "src/lib.rs"

[dependencies]
harness-core      = { workspace = true }
harness-context   = { workspace = true }
harness-hooks     = { workspace = true }
harness-compactor = { workspace = true }
harness-models    = { workspace = true }
async-trait       = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
schemars          = { workspace = true }
futures           = { workspace = true }

[dev-dependencies]
harness-skills    = { workspace = true }
harness-tools-fs  = { workspace = true }
once_cell         = { workspace = true }
harness-context   = { workspace = true }
harness-core      = { workspace = true }
async-trait       = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt-multi-thread"] }
