[package]
name = "harness-rs-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ReAct agent loop, subagent isolation, and session record/replay (JSONL) for the harness-rs framework."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "README.md"
[lib]
name = "harness_loop"
path = "src/lib.rs"

[dependencies]
harness-core      = { workspace = true }
harness-context   = { workspace = true }
harness-hooks     = { workspace = true }
harness-compactor = { workspace = true }
harness-models    = { workspace = true }
async-trait       = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
schemars          = { workspace = true }
futures           = { workspace = true }

# OTLP export (feature `otel`) — optional, single-crate blast radius. The library
# instruments with plain `tracing`; these turn spans into OpenTelemetry only when
# the binary opts in.
opentelemetry         = { version = "0.32", optional = true }
opentelemetry_sdk     = { version = "0.32", optional = true }
opentelemetry-otlp    = { version = "0.32", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
tracing-subscriber    = { workspace = true, optional = true }

[features]
# Export the agent's `tracing` telemetry over OTLP (Jaeger / Tempo / SigNoz /
# Logfire / Langfuse). See `src/otel.rs`.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dev-dependencies]
harness-skills       = { workspace = true }
harness-tools-fs     = { workspace = true }
harness-tools-skills = { workspace = true }
once_cell         = { workspace = true }
harness-context   = { workspace = true }
harness-core      = { workspace = true }
async-trait       = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
