[package]
name = "harness-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Procedural macros for the harness framework (#[skill], #[tool], #[guide], #[sensor], #[hook])"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
