[package]
name = "harness-rs-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Procedural macros for harness-rs: #[skill], #[tool], #[guide], #[sensor], #[hook]. agentskills.io-compliant registration via inventory."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
