[package]
name = "harness-rs-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) stdio server exposing the harness-rs tool registry to Claude Code, Cursor, and Codex."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
name = "harness_mcp"
path = "src/lib.rs"

[dependencies]
harness-core    = { workspace = true }
harness-context = { workspace = true }
async-trait     = { workspace = true }
tokio           = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "sync", "time"] }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }

[dev-dependencies]
harness-tools-fs = { workspace = true }
