[package]
name = "harness-rs-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LLM model adapters for harness-rs — OpenAiCompat (DeepSeek/Groq/Together/Ollama), AnthropicNative (Messages API), MockModel."

keywords     = ["agent", "ai", "llm", "harness"]
categories   = ["asynchronous", "development-tools"]
readme       = "../../README.md"
[lib]
name = "harness_models"
path = "src/lib.rs"

[dependencies]
harness-core = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
futures      = { workspace = true }
reqwest      = { workspace = true, features = ["stream"] }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio-util   = { version = "0.7", features = ["io"] }
bytes        = "1"
