[package]
name = "harness-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sandbox trait + worktree / container / vm backends"

[dependencies]
harness-core    = { workspace = true }
harness-context = { workspace = true }
async-trait     = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
